--- a/src/chat.css
+++ b/src/chat.css
@@ -232,8 +232,23 @@ body{
 /* Modile Screen  */
 @media screen and (max-width: 600px) {
 	.card{
-		max-height: 600px;
+		max-height: 400px;
 	}
+ 
+	.chatbtn {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-wrap: wrap;
+	  }
+	  .chatbtn span {
+		margin-left: 0;
+		margin-top: 5px;
+	  }
+
+
+
+
   }
   
 
