--- a/src/chat.css
+++ b/src/chat.css
@@ -232,17 +232,14 @@ body{
 /* Modile Screen  */
 @media screen and (max-width: 600px) {
 	.card{
-		max-height: 400px;
+	  max-height: 400px;
 	}
- 
+   
 	.navbar-brand{
-      text-align: center;
+	  text-align: center;
+	  display: block;
 	  margin: 0 auto;		
 	}
-
-
-
-
   }
   
 
